Add support for casting (`cast(field_name to ip)`) and remove existing unused sorting syntax.
Signed-off-by: currantw <taylor.curran@improving.com>